<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:motion="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.example.android.politicalpreparedness.representative.RepresentativeViewModel" />
    </data>

    <!-- TODO: Add motion scene to hide form on vertical scroll. -->
    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/fragment_representative_scene">

        <!-- TODO: Add visual styling and content -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_address_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/search_title"
                style="@style/TextAppearance.AppCompat.SearchResult.Title"
                android:layout_width="wrap_content"

                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:text="@string/representative_search"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_line_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_address_line_1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/address_line_1"
                    android:hint="@string/address_line_1"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:text="@={viewModel.address.line1}" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/address_line_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_address_line_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/address_line_2"
                    android:hint="@string/address_line_2"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:text="@={viewModel.address.line2}" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/city"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@id/state"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/address_line_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/city"
                    android:hint="@string/city"
                    android:imeOptions="actionNext"
                    android:inputType="textPostalAddress"
                    android:text="@={viewModel.address.city}" />
            </com.google.android.material.textfield.TextInputLayout>

            <EditText
                android:id="@+id/state"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:autofillHints="@string/state"
                android:hint="state"
                android:inputType="textPostalAddress"
                android:text="@={viewModel.address.state}"
                app:layout_constraintBottom_toBottomOf="@id/city"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/city"
                app:layout_constraintTop_toTopOf="@id/city" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/zip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/city"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/city">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_zip"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints="@string/zip"
                    android:hint="@string/zip"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:maxLength="5"
                    android:text="@={viewModel.address.zip}" />
            </com.google.android.material.textfield.TextInputLayout>


            <!-- TODO: Add visual styling and label -->
            <Button
                android:id="@+id/button_search"
                style="@style/searchBtnStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:backgroundTint="@color/green"
                android:text="find my representatives"
                app:layout_constraintTop_toBottomOf="@id/zip" />

            <!-- TODO: Add visual styling and content -->
            <Button
                android:id="@+id/button_location"

                style="@style/saveBtnStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="use current location"
                app:layout_constraintTop_toBottomOf="@id/button_search" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_representatives"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/layout_address_search">

            <TextView
                android:id="@+id/representative_title"
                style="@style/TextAppearance.AppCompat.SearchResult.Title"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_representatives"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_representatives"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:gravity="center"
                android:textAlignment="center"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/representative_title"
                motion:visibilityMode="ignore" />
        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>